Added JS firework to projects section

--- a/index.html
+++ b/index.html
@@ -107,6 +107,17 @@
 			</div>
 		</div>
 	</div>
+	<div id="projects" class="projects">
+		<div class="container">
+			<div class="row">
+		<h3 class=text-vcenter>Semi-intersting JavaScript projects!</h3>
+		<p><span>Fireworks! Click to make some magic happen.</span>
+		<canvas class="js-box" id="canvas1" width="400px" height="400px"></canvas>
+		</p>
+			</div>
+		</div>
+	</div>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/5-2.js"></script>
 </body>
 </html>
