Adding fallback to canvas element.

--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
 			<div class="row">
 		<h3 class=text-vcenter>Semi-intersting JavaScript projects!</h3>
 		<p><span>Fireworks! Click to make some magic happen.</span>
-		<canvas class="js-box" id="canvas1" width="400px" height="400px"></canvas>
+		<canvas class="js-box" id="canvas1" width="400px" height="400px">
+			Oops there was nothing to load!
+		</canvas>
 		</p>
 			</div>
 		</div>
