--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 			<div class="collapse navbar-collapse" id="navbar-collapse-main">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="#about">About Me</a></li>
-						<li><a href="#project">Personal Projects</a></li>
-						<li><a href="#experience">Professional Experience</a></li>
+						<li><a href="#project">Projects</a></li>
+						<li><a href="#courses">Relevant Courses</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 			</div>
@@ -107,7 +107,7 @@
 			</div>
 		</div>
 	</div>
-	<div id="projects" class="projects">
+	<div id="project" class="project">
 		<div class="container">
 			<div class="row">
 		<h3 class=text-vcenter>Semi-intersting JavaScript projects!</h3>
