--- a/index.html
+++ b/index.html
@@ -108,16 +108,12 @@
 		</div>
 	</div>
 	<div id="project" class="project">
-		<div class="container">
-			<div class="row">
 		<h3 class=text-vcenter>Semi-intersting JavaScript projects!</h3>
-		<p><span>Fireworks! Click to make some magic happen.</span>
+		<p><span class="proj_text">Fireworks! Click to make some magic happen.</span>
 		<canvas class="js-box" id="canvas1" width="400px" height="400px">
 			Oops there was nothing to load!
 		</canvas>
 		</p>
-			</div>
-		</div>
 	</div>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/5-2.js"></script>
