Removing stuff that was not serious

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
 				<div class="col-sm-12">
 					<img src="img/KKemp.jpg" class="profilepic" alt="Kevin Kemp">
 					<h1>Kevin Kemp</h1>
-					<h3>Welcome to my personal website.</h3>
+					<h3>Software Engineer</h3>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-lg-3"></div>
 				<div class="col-lg-6">
 					<p>
-						My cool site to make you like me.
+						University of Wisconsin - Madison year of 2020 graduate.
 					</p>
 				</div>
 				<div class="col-lg-3"></div>
@@ -64,11 +64,11 @@
 				</div>
 				<div class="col-lg-4">
 					<h1>Personal</h1>
-						<p>Can play expert on Guitar Hero (most songs)</p>
+						<p>Hobey Baker Memorial Leadership Award.<br /> Captain of Varsity hockey and lacrosse.</p>
 				</div>
 				<div class="col-lg-4">
-					<h1>Other</h1>
-					<p>Very interesting stuff that will get me a job</p>
+					<h1>Technical Skills</h1>
+					<p>Proficiency with Java, JavaScript, Python, C#, SQL, C, HTML, CSS</p>
 				</div>
 			</div>
 		</div>
@@ -85,8 +85,10 @@
 						<li>CS 354: Machine Organization and Programming
 						<li>CS 400: Introduction to Programming III
 						<li>CS 402: Introducing Computer Science to K-12
+						<li>CS 506: Software Engineering
 						<li>CS 537: Introduction to Operating Systems
 						<li>CS 540: Introduction to Artificial Intelligence
+						<li>CS 559: Computer Graphics
 						<li>CS 577: Introduction to Algorithms
 						<li>CS 642: Introduction to Information Security
 					</ul>
@@ -108,7 +110,7 @@
 		</div>
 	</div>
 	<div id="project" class="project">
-		<h3 class=text-vcenter>Semi-intersting JavaScript projects!</h3>
+		<h3 class=text-vcenter>JavaScript projects!</h3>
 		<p><span class="proj_text">Fireworks! Click to make some magic happen.</span>
 		<canvas class="js-box" id="canvas1" width="400px" height="400px">
 			Oops there was nothing to load!
