Fixing some css

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<meta name="description" content="Kevin Kemp's personal website">
 	<link href="css/style.css" rel="stylesheet"> 
 	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/custom.css" rel="stylesheet">
 </head>
 <body>
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -110,12 +111,15 @@
 		</div>
 	</div>
 	<div id="project" class="project">
-		<h3 class=text-vcenter>JavaScript projects!</h3>
-		<p><span class="proj_text">Fireworks! Click to make some magic happen.</span>
+		<div><h3 class=text-vcenter>JavaScript projects!</h3></div>
+		<div>
 		<canvas class="js-box" id="canvas1" width="400px" height="400px">
 			Oops there was nothing to load!
 		</canvas>
-		</p>
+		</div>
+		<p><span class="proj_text">Fireworks! Click to make some magic happen.</span></p>
+		
+	
 	</div>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/5-2.js"></script>
