--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<title>Kevin Kemp's Personal Site</title>
@@ -8,16 +9,16 @@
 	<meta name="keywords" content="Kevin Kemp,Kevin,Kemp,Personal Website,University of Wisconsin,UW
 	Madison,kemp,kkemp3"> == $0
 	<meta name="description" content="Kevin Kemp's personal website">
-	<link href="css/style.css" rel="stylesheet"> 
+	<link href="css/style.css" rel="stylesheet">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/custom.css" rel="stylesheet">
 </head>
+
 <body>
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-		<div class="container-fluid"> 
+		<div class="container-fluid">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse"
-				data-target="#navbar-collapse-main">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-main">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -26,18 +27,19 @@
 				<a class="navbar-brand" href="#">Kevin Kemp</a>
 			</div>
 			<div class="collapse navbar-collapse" id="navbar-collapse-main">
-					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#about">About Me</a></li>
-						<li><a href="#project">Projects</a></li>
-						<li><a href="#courses">Relevant Courses</a></li>
-						<li><a href="#contact">Contact</a></li>
-					</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#about">About Me</a></li>
+					<li><a href="#project">Projects</a></li>
+					<li><a href="#courses">Relevant Courses</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
 			</div>
 		</div>
 	</nav>
 	<div id="home" class="home">
 		<div class="text-vcenter">
 			<div class="row">
+				<h1 id="fadeout">Welcome!</h1>
 				<div class="col-sm-12">
 					<img src="img/KKemp.jpg" class="profilepic" alt="Kevin Kemp">
 					<h1>Kevin Kemp</h1>
@@ -60,12 +62,12 @@
 			<div class="row">
 				<div class="col-lg-4">
 					<h1>Education</h1>
-						<p>University of Wisconsin - Madison</p>
-						<p>B.S. in Computer Sciences</p>
+					<p>University of Wisconsin - Madison</p>
+					<p>B.S. in Computer Sciences</p>
 				</div>
 				<div class="col-lg-4">
 					<h1>Personal</h1>
-						<p>Hobey Baker Memorial Leadership Award.<br /> Captain of Varsity hockey and lacrosse.</p>
+					<p>Hobey Baker Memorial Leadership Award.<br /> Captain of Varsity hockey and lacrosse.</p>
 				</div>
 				<div class="col-lg-4">
 					<h1>Technical Skills</h1>
@@ -106,22 +108,26 @@
 					<h2>Contact</h2>
 					<p><b>School Email:</b> <a href="mailto:kkemp3@wisc.edu">kkemp3@wisc.edu</a></p>
 					<p><b>Phone Number:</b> <a href="tel:7634862727">(763) 486-2727</a></p>
+					<p><b>LinkedIn:</b> <a href="https://www.linkedin.com/in/kevin-kemp-b48046139/">Kevin Kemp</a></p>
 				</div>
 			</div>
 		</div>
 	</div>
 	<div id="project" class="project">
-		<div><h3 class=text-vcenter>JavaScript projects!</h3></div>
+		<div class="container">
 		<div>
-		<canvas class="js-box" id="canvas1" width="400px" height="400px">
-			Oops there was nothing to load!
-		</canvas>
+			<h3 class=text-vcenter>JavaScript projects!</h3>
 		</div>
-		<p><span class="proj_text">Fireworks! Click to make some magic happen.</span></p>
-		
-	
+		<div>
+			<canvas class="js-box" id="canvas1" width="400px" height="400px">
+				Oops there was nothing to load!
+			</canvas>
+		</div>
+		<p><span class="proj_text">Fireworks! Click to light up the sky.</span></p>
 	</div>
+		</div>div>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/5-2.js"></script>
 </body>
+
 </html>
